# Moby

./: BUILD-OPTIONS.py  CHANGES  CMakeLists.txt  COPYING  README  README.md  SConstruct  index.html  parameters.txt  params.json  references.txt  regression-test
CMakeModules/: FindCBLAS.cmake  FindLAPACKLite.cmake  FindMPFR.cmake  FindQHULL.cmake  FindQPOASES.cmake  FindRavelin.cmake  FindSuperLU.cmake
Kinematic/: Kinematic.pro  KinematicForm.h  KinematicForm.ui  KinematicFormImpl.cpp  KinematicFormImpl.h  ObjectForm.h  ObjectForm.ui  ObjectFormImpl.cpp  ObjectFormImpl.h  README  SConscript  main.cpp
docs/: Moby  XML-structure.tex  fixed.nb  install.tex  prismatic.nb  revolute.nb  universal.nb
example/: README  SConscript  adjust-center.cpp  center.cpp  compare-trajs.cpp  construct-OBB.cpp  conv-decomp.cpp  convert-tetgen-to-moby.cpp  convexify.cpp  driver.cpp  extract-contacts.py  kinematics.cpp  objtowrl.cpp  output-symbolic.cpp  plugin-template.cpp  regress.cpp  render.cpp  render_movie.sh  render_movie_simple.sh  view.cpp
example/parts-feeder/: CMakeLists.txt  feeder.cpp  feeder.xml
example/tetra_maker/: CMakeLists.txt  Common.cmake  main.cpp
programs/: center.cpp  convexify.cpp  driver.cpp  main.cpp  objwrl.cpp  regress.cpp  render-movie-simple.sh  render-movie.sh  render.cpp  render_movie_simple.sh  view.cpp
regress/: compare-trajs  contact-constrained-pendulum.setup  regenerate-regression-data  regress  regression-test  rimless-wheel.setup  rolling-torus.setup  script  spinning-boxes.setup  stacks.setup
src/: AABB.cpp  AAngle.cpp  ADF.cpp  BV.cpp  (+150 more)
(+1454 files in other folders)
